--- a/styles/comapnionmanager.css
+++ b/styles/comapnionmanager.css
@@ -1,3 +1,14 @@
+#companionManager .window-content{
+    padding: 0px;
+
+}
+
+#companion-list{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
 .actor-image{
     width: 50px;
     height: 50px;
@@ -7,7 +18,7 @@
 .companion-item{
     display: flex;
     align-items: center;
-    border-top: 1px solid black;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.6);
     padding: 8px;
 }
 
@@ -19,6 +30,10 @@
 }
 
 .warpgate-btn{
+    -moz-mask-image: url(../assets/boomerang-sun.svg);
+    -webkit-mask-image: url(../assets/boomerang-sun.svg);
+    mask-image: url(../assets/boomerang-sun.svg);
+    background: rgba(0, 0, 0, 0.75);
     z-index: 10;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
@@ -29,6 +44,7 @@
 }
 
 .warpgate-btn:hover{
+    cursor: pointer;
     opacity: 1;
 }
 
