--- a/templates/companionmanager.hbs
+++ b/templates/companionmanager.hbs
@@ -1,4 +1,4 @@
-<form>
+<form class="nodrop">
     <div class="form-group">
         <ol id="companion-list" class="directory-list"></ol>
     </div>
